@@ -16,6 +16,7 @@ TODO :
 	js : fixed Type.enumEq with null values
 	js/flash8 : use &0xFF in haxe.io.Bytes.set
 	flash9 : fixed switch on Null<Int> verify error
+	flash9 : fixes related to UInt type + error when using Int/UInt comparison
 
 2009-03-22: 2.03
 	optimized Type.enumEq : use index instead of tag comparison for neko/flash9/php
